crates/ink/tests/ui/contract/fail/module-use-forbidden-idents.stderr
error: encountered invalid identifier starting with __ink_
 --> tests/ui/contract/fail/module-use-forbidden-idents.rs:2:5
  |
2 | mod __ink_contract {
  |     ^^^^^^^^^^^^^^

error: encountered invalid identifier starting with __ink_
 --> tests/ui/contract/fail/module-use-forbidden-idents.rs:4:16
  |
4 |     pub struct __ink_Contract {}
  |                ^^^^^^^^^^^^^^

error: encountered invalid identifier starting with __ink_
 --> tests/ui/contract/fail/module-use-forbidden-idents.rs:6:11
  |
6 |     const __ink_CONST: () = ();
  |           ^^^^^^^^^^^

error: encountered invalid identifier starting with __ink_
 --> tests/ui/contract/fail/module-use-forbidden-idents.rs:7:12
  |
7 |     static __ink_STATIC: () = ();
  |            ^^^^^^^^^^^^

error: encountered invalid identifier starting with __ink_
 --> tests/ui/contract/fail/module-use-forbidden-idents.rs:8:10
  |
8 |     type __ink_Type = ();
  |          ^^^^^^^^^^

error: encountered invalid identifier starting with __ink_
  --> tests/ui/contract/fail/module-use-forbidden-idents.rs:10:10
   |
10 |     impl __ink_Contract {
   |          ^^^^^^^^^^^^^^

error: encountered invalid identifier starting with __ink_
  --> tests/ui/contract/fail/module-use-forbidden-idents.rs:12:16
   |
12 |         pub fn __ink_constructor(__ink_input: __ink_Type) -> Self {
   |                ^^^^^^^^^^^^^^^^^

error: encountered invalid identifier starting with __ink_
  --> tests/ui/contract/fail/module-use-forbidden-idents.rs:12:34
   |
12 |         pub fn __ink_constructor(__ink_input: __ink_Type) -> Self {
   |                                  ^^^^^^^^^^^

error: encountered invalid identifier starting with __ink_
  --> tests/ui/contract/fail/module-use-forbidden-idents.rs:12:47
   |
12 |         pub fn __ink_constructor(__ink_input: __ink_Type) -> Self {
   |                                               ^^^^^^^^^^

error: encountered invalid identifier starting with __ink_
  --> tests/ui/contract/fail/module-use-forbidden-idents.rs:17:16
   |
17 |         pub fn __ink_message(&self, __ink_input: __ink_Type) -> __ink_Type {
   |                ^^^^^^^^^^^^^

error: encountered invalid identifier starting with __ink_
  --> tests/ui/contract/fail/module-use-forbidden-idents.rs:17:37
   |
17 |         pub fn __ink_message(&self, __ink_input: __ink_Type) -> __ink_Type {
   |                                     ^^^^^^^^^^^

error: encountered invalid identifier starting with __ink_
  --> tests/ui/contract/fail/module-use-forbidden-idents.rs:17:50
   |
17 |         pub fn __ink_message(&self, __ink_input: __ink_Type) -> __ink_Type {
   |                                                  ^^^^^^^^^^

error: encountered invalid identifier starting with __ink_
  --> tests/ui/contract/fail/module-use-forbidden-idents.rs:17:65
   |
17 |         pub fn __ink_message(&self, __ink_input: __ink_Type) -> __ink_Type {
   |                                                                 ^^^^^^^^^^

error: encountered invalid identifier starting with __ink_
  --> tests/ui/contract/fail/module-use-forbidden-idents.rs:18:17
   |
18 |             let __ink_first = ();
   |                 ^^^^^^^^^^^
